--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <script src="adSense.js"></script>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Gun Mayhem 3  Unblocked - ClassRoom6x</title>
     <meta name="website" content="ucbg.github.io" />
